Add at least a test vector.

--- a/rebar.config
+++ b/rebar.config
@@ -11,3 +11,10 @@
     {"darwin10.*-32$", "CXXFLAGS", "-m32"},
     {"darwin10.*-32$", "LDFLAGS", "-arch i386"}
 ]}.
+
+{eunit_opts, [
+    verbose,
+    {report, {
+        eunit_surefire, [{dir,"."}]
+    }}
+]}.
