--- a/rebar.config
+++ b/rebar.config
@@ -1,20 +1,16 @@
-{port_specs, [{"priv/siphash.so", ["c_src/*.c"]}]}.
+{pre_hooks, [
+    {"(darwin|linux)", compile, "make -C c_src"}
+]}.
 
-{port_env, [
-    {".*", "CFLAGS", "$CFLAGS -O3 -g -Wall -W"},
-
-    %% OS X Leopard flags for 64-bit
-    {"darwin9.*-64$", "CXXFLAGS", "-m64"},
-    {"darwin9.*-64$", "LDFLAGS", "-arch x86_64"},
-
-    %% OS X Snow Leopard flags for 32-bit
-    {"darwin10.*-32$", "CXXFLAGS", "-m32"},
-    {"darwin10.*-32$", "LDFLAGS", "-arch i386"}
+{post_hooks, [
+    {"(darwin|linux)", clean, "rm -f priv/*.so"},
+    {"(darwin|linux)", clean, "make -C c_src clean"}
 ]}.
 
 {eunit_opts, [
     verbose,
-    {report, {
-        eunit_surefire, [{dir,"."}]
-    }}
+    {report,
+        {
+            eunit_surefire, [{dir, "."}]
+        }}
 ]}.
